2008-05-31  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	suppress warning for deprecated function (GCC 4 or later)

	* Makefile.in:
	use bzip2 to compress distribution files

	* avatar.c:
	cleanup: reorganize loading of image-data in a more object oriented way

2008-05-30  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	support --enable-link-sdl-image to directly link to SDL_image
	
	* avatar.c:
	support LINK_SDL_IMAGE definition

2008-05-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c:
	bundle up SDL_image stuff into one structure

	* akfavatar.h, avatar.c (avt_import_XPM, avt_show_image_XPM):
	new functions

2008-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (set_encoding, escape_sequence, process_subprogram):
	support for VT100 graphic characters

	* avatarsay.c (escape_sequence, CSI_sequence):
	ignore binray zero in datastream

	* avatarsay.c (process_subprogram, escape_sequence):
	experimental support for charsets G0 and G1 (linux-compatible)

	* avatarsay.c (escape_sequence, CSI_sequence):
	CAN or SUB cancel the escape sequence

	* avatarsay.c (escape_sequence):
	switching to UTF-8 and back to default (ESC % G, ESC % @)

2008-05-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_subprogram):
	set encoding to default_encoding

	* avatarsay.c (process_subprogram, escape_sequence, CSI_sequence):
	support for single byte CSI code

	* avatarsay.c (escape_sequence):
	Extension: CSI ? 56 h  - switch slow-print on (l for off)

2008-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_backspace): 
	fix: just go back, don't clear the character
	(avt_ask): adapted

	* avatarsay.c (init_language_info): handle long language names 
	case-insensitive

	* avtfilechooser.c (MARK, PARENT_DIRECTORY, RESTART, CONTINUE)
	(LONGER, DIRECTORY): new macros
	(get_file): mark longer entries

	* avtfilechooser.c (get_file):
	use avt_auto_margin, remove show_name
	mark directory entries
